removed testing alerts

--- a/App/templates/home/index.html
+++ b/App/templates/home/index.html
@@ -39,7 +39,7 @@
                         <a class="btn btn-sm btn-success  ml-3" href="modif_produit?id={{produit.id}}" >  <i class="tim-icons icon-pencil"></i> </a> 
                         
                         {% autoescape off %}<a class="btn btn-sm btn-info  ml-3" href="{% url "details_produit" %}?id={{produit.id}}">Details</a>{% endautoescape %}
-                        {% autoescape off %}<a class="btn btn-sm btn-outline-primary  ml-3" href="{{produit.qr_code.url }}"> <i class="tim-icons icon-cloud-download-93"></i> code qr</a>{% endautoescape %}
+                        {% autoescape off %}<a class="btn btn-sm btn-outline-primary  ml-3" download="qrcode {{produit.nom}}.jpg" href="{{produit.qr_code.url }}"> <i class="tim-icons icon-cloud-download-93"></i> code qr</a>{% endautoescape %}
                         <a class="btn btn-sm btn-danger del ml-3" href="{% url "suppr" %}?id={{produit.id}}"> <svg height="20" viewbox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"></path></svg></a>
                       </div>
                     </td>
