--- a/App/static/assets/css/mycss.css
+++ b/App/static/assets/css/mycss.css
@@ -4,6 +4,11 @@ body {
   font-size:20px;
   /*background-color:lightblue ;*/
 }
+
+#logo{
+  height: 85px;
+  width: 100px;
+}
 canvas{
   background-color: rgb(179, 218, 210);
 }
