--- a/App/templates/includes/sidebar.html
+++ b/App/templates/includes/sidebar.html
@@ -1,10 +1,10 @@
+{% load static %}
+
 <div class="sidebar" data-color="blue">
     <div class="sidebar-wrapper" data-color="blue">
         <div class="logo">
-            <a href="javascript:void(0)" class="simple-text logo-mini">
-                CM
-            </a>
-            <a href="javascript:void(0)" class="simple-text logo-normal">
+            <a href="/" >
+                <img src="{% static 'assets/img/favicon.png'%}" id="logo">
                 Gestock
             </a>
         </div>
