--- a/App/templates/home/login.html
+++ b/App/templates/home/login.html
@@ -1,4 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
+{% load static %}
 
 {% block title %} Login {% endblock %} 
 
@@ -13,21 +14,27 @@
                 <div class="col-md-6 mt-5 offset-md-3 pt-5 mt-5">
                     <div class="card">
                         <div class="card-header text-center py-4">
-                            <h4 class="title">Se connecter a  CM GESTOCK</h4>
+                            <h4 class="title">Se connecter à GESTOCK</h4>
                         </div>
-                             {% if error %}
-                             <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                <strong class=" text-danger text-center">{{error}}</strong>
-                             </div>
-                            {% endif %}
+                        <div class="logo text-center" style="margin-bottom: 10px;">
+                            <a href="/" >
+                                <img src="{% static 'assets/img/favicon.png'%}" id="logo" style="height: 100px; width: auto;">
+                                <h3>Gestock</h3>
+                            </a>
+                        </div>
+                        {% if error %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong class="text-danger text-center">{{error}}</strong>
+                        </div>
+                        {% endif %}
                         <div class="card-body px-5 py-3">
                             <form method="post">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-md-12 px-md-1">
                                         <div class="form-group">
-                                            <label>Nom d'uilisateur</label>
-                                            <input type="text" class="form-control" placeholder="Nom d'uilisateur" name="username"
+                                            <label>Nom d'utilisateur</label>
+                                            <input type="text" class="form-control" placeholder="Nom d'utilisateur" name="username"
                                                 {% if username %}value="{{username}}"{% endif %}
                                             >
                                         </div>
@@ -35,8 +42,8 @@
 
                                     <div class="col-md-12 px-md-1">
                                         <div class="form-group">
-                                            <label>mot de passe</label>
-                                            <input type="password" class="form-control" placeholder="mot de passe" name="password"
+                                            <label>Mot de passe</label>
+                                            <input type="password" class="form-control" placeholder="Mot de passe" name="password"
                                                  {% if password %}value="{{password}}"{% endif %}
                                             >
                                         </div>
