made produits table responsive

--- a/App/static/assets/css/mycss.css
+++ b/App/static/assets/css/mycss.css
@@ -525,3 +525,10 @@ table td, table th {
 .block-four {
   background-color: #2ecc71;
 }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
