--- a/App/templates/home/login.html
+++ b/App/templates/home/login.html
@@ -23,7 +23,7 @@
                             </a>
                         </div>
                         {% if error %}
-                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <div class="alert alert-info alert-dismissible fade show" role="alert">
                             <strong class="text-danger text-center">{{error}}</strong>
                         </div>
                         {% endif %}
