--- a/App/templates/home/user.html
+++ b/App/templates/home/user.html
@@ -75,6 +75,25 @@
    <script src="{% static 'assets/js/index1.js'%}"></script> <!-- REPLY JS--> 
     <!-- THEMECOLORS JS --> 
    <script src="{% static 'assets/js/themeColors.js'%}"></script>
+   <script src="{% static 'assets/js/apexcharts.js'%}"></script>  
+	<!-- MY JS --><script src="{% static 'js/script.js'%}"></script><!-- INTERNAL SELECT2 JS --> 
+	<script src="{% static 'assets/plugins/select2/select2.full.min.js'%}"></script>
+	 <!-- CHART-CIRCLE JS--> <script src="{% static 'assets/js/circle-progress.min.js'%}"></script> <!-- INTERNAL Data tables js--> 
+	 <script src="{% static 'assets/plugins/datatable/js/jquery.dataTables.min.js'%}"></script> 
+	 <script src="{% static 'assets/plugins/datatable/js/dataTables.bootstrap5.js'%}"></script> 
+	 <script src="{% static 'assets/plugins/datatable/dataTables.responsive.min.js'%}"></script>
+	   <script src="{% static 'assets/js/index1.js'%}"></script> <!-- REPLY JS--> 
+	    <!-- THEMECOLORS JS --> 
+	   <script src="{% static 'assets/js/themeColors.js'%}"></script>
+	
+		<script src=" {% static 'assets/plugins/datatable/js/dataTables.buttons.min.js' %} "></script>
+		<script src=" {% static 'assets/plugins/datatable/js/buttons.bootstrap5.min.js' %} "></script>
+		<script src=" {% static 'assets/plugins/datatable/js/jszip.min.js' %} "></script>
+		<script src=" {% static 'assets/plugins/datatable/responsive.bootstrap5.min.js' %} "></script>
+		<script src=" {% static 'assets/js/table-data.js' %} "></script>
+
+		<!-- THEMECOLORS JS -->
+		<script src="{% static 'assets/js/themeColors.js'%}"></script>
 
 {% endblock javascripts %}
 
